# davinci-kit

./: .cursorrules  Justfile  LICENSE  README.md
.cursor/rules/: testing.mdc
davinci-cli/: Justfile  README.md  pyproject.toml
davinci-cli/src/: cli.py  davinci.py  logger.py  macro.py  subtitles.py
davinci-cli/tests/: test_macro.py
davinci-jsonnet/: Justfile  README.md  main.libsonnet  main_tests.libsonnet
davinci-jsonnet/examples/: README.md  bezierSpline.jsonnet  chainMerge.jsonnet  effect.jsonnet  group.jsonnet  keyframes.jsonnet  mask.jsonnet  mediaInOut.jsonnet  path.jsonnet  polyline.jsonnet  singleTool.jsonnet
